--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keyword" content="HTML,CSS" />
-    <title>TRIAL</title>
+    <title>Nat</title>
     <style>
       img {
         width: 100px;
